// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#DBDBDB",
      },
      null,
      Object {
        "height": 0.5,
      },
    ]
  }
/>
`;

exports[`Divider Component render with props 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#DBDBDB",
      },
      Object {
        "flexDirection": "column",
      },
      Object {
        "width": 0.5,
      },
      Object {
        "width": 200,
      },
      Object {
        "height": 2,
      },
      Object {
        "backgroundColor": "#ff0000",
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
/>
`;
